# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--mark@sdf-eu.org--arch/WWW-Mediawiki-Client--0.25
#
2006-06-29 15:46:45 GMT Mark Jaroski <mark@geekhive.net>	patch-49

    Summary:
      Removed file t/files/.mediawiki which was errently causing the server
      tests to be run for users who had not set up a server.

2006-06-27 07:01:15 GMT Mark Jaroski <mark@geekhive.net>	patch-48

    Summary:
      Fixed a number of bugs from RT, and one that I found.


2005-06-06 13:12:06 GMT	Mark Jaroski <mark@geekhive.net>	patch-47

    Summary:
      Fixed a couple of minor bugs, added documentation
    Revision:
      WWW-Mediawiki-Client--0.25--patch-47

    Fixed two bugs that had to do with dependencies, including changing the
    version number of URI required to 1.31, and added a use Encode line.  Added
    to the documentation to highlight differences.
    
    -mark
    
    

    modified files:
     ChangeLog Makefile.PL bin/mvs lib/WWW/Mediawiki/Client.pm


2005-06-03 15:16:58 GMT	Mark Jaroski <mark@geekhive.net>	patch-46

    Summary:
      added encoding field
    Revision:
      WWW-Mediawiki-Client--0.25--patch-46

    Some Mediawiki servers use encodings other than UTF-8.  For these servers
    it's necessary to detect the encoding and use it for uploading content.
    
    

    modified files:
     bin/mvs lib/WWW/Mediawiki/Client.pm


2005-05-30 14:00:48 GMT	Mark Jaroski <mark@geekhive.net>	patch-45

    Summary:
      added hack to correct UTF-8 file upload problem
    Revision:
      WWW-Mediawiki-Client--0.25--patch-45

    Added a hack to correct a problem with multibyte characters in URL::Encode
    which is used when uploading data through LWP.
    
    

    modified files:
     lib/WWW/Mediawiki/Client.pm


2005-05-30 07:24:31 GMT	Mark Jaroski <mark@geekhive.net>	patch-44

    Summary:
      got rid of wide character warnings
    Revision:
      WWW-Mediawiki-Client--0.25--patch-44
