@@ -1,6 +1,11 @@
 # do not edit -- automatically generated by arch changelog
 # arch-tag: automatic-ChangeLog--mark@sdf-eu.org--arch/WWW-Mediawiki-Client--0.25
 #
+2006-07-01 17:55:03 GMT Mark Jaroski <mark@geekhive.net>	patch-49
+
+    Summary:
+       Fixed an errant test failure in wikitravel related urls.
+
 2006-06-29 15:46:45 GMT Mark Jaroski <mark@geekhive.net>	patch-49
 
     Summary:
